[package]
name = "two-party-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.6"
serde_json = "1"
zeroize = "1"
sha3 = "0.8.1"
sha2 = "0.10"
subtle = "2"
rayon = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.7.8"
bit-vec = "0.5"
ring = "0.16"
cryptoxide = "0.1"

[dependencies.rust-gmp]
version = "0.5.0"
features = ["serde_support"]
git = "https://github.com/KZen-networks/rust-gmp"

[dependencies.secp256k1]
version = "0.12.0"
features = ["rand", "serde"]



[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "keygen"
path = "benches/multi_party_ecdsa/gg18/keygen.rs"
harness = false
