[package]
name = "two-party-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8"
zeroize = "1"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rayon = "1"
serde = "1"
serde_derive = "1.0"
itertools = "0.10"
bit-vec = "0.6"
[dependencies.rust-gmp]
version = "0.5.0"
features = ["serde_support"]
git = "https://github.com/KZen-networks/rust-gmp"

[dependencies.secp256k1]
version = "0.21.0"
features = ["rand", "serde"]

[dev-dependencies]
serde_json = "1"

